[project]
name = "perun-services"
requires-python = "==3.9"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

[project.urls]
Repository = "https://gitlab.ics.muni.cz/perun/perun-idm/perun-services.git"

[tool.ruff]
extend-include = ["./send/pithia_portal", "./send/ftps_generic", "./send/bbmri_networks", "./send/tinia", "./send/webcentrum_eosc", "./send/umbraco_mu", "./send/m365_cloud", "./send/slack", "./send/o365_groups_mu", "./send/atlassian_mu", "./send/bbmri_collections", "./send/generic_sender.py", "./send/send_lib.py", "./send/scs_it4i", "./send/generic_json_gen", "./send/sympa_cesnet", "./slave/process-scim/lib/process-scim.example", "./send/google_groups", "./send/vsup_google_groups"]
ignore = ['E501'] # ignore line too long - formatter does a best-effort wrap

[tool.ruff.lint]
select = [
	# pycodestyle
	"E",
	# Pyflakes
	"F",
	# pyupgrade
	"UP",
	# flake8-bugbear
	"B",
	# flake8-simplify
	"SIM",
	# isort
	"I",
]
